--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h1>
     Farmacia
 </h1>    
-<img id="atendente" src="imagem_noticia_1_0.png"
+<img id="atendente" src="imagem_noticia_1_0.png" class="farmacia">
 <p>Remédio</p>
 </body>
 </html>
