--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <title>Ana</title>
 </head>
 <body>
+    <div class="ini">
 <h1>
     Farmacia
-</h1>    
+</h1>   
+    </div> 
 <img id="atendente" src="imagem_noticia_1_0.png" class="farmacia">
 <p>Remédio</p>
 </body>
