--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <div class="ini">
 <h1>
     Farmacia
-</h1>   
+</h1>  
+<a class="button" >acesse aqui</a>
     </div> 
 <img id="atendente" src="imagem_noticia_1_0.png" class="farmacia">
 <p>Remédio</p>
