--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <h1>
     Farmacia
 </h1>  
-<a class="button" >acesse aqui</a>
+<a href="https://www.belezanaweb.com.br/" class="button" >acesse aqui</a>
     </div> 
 <img id="atendente" src="imagem_noticia_1_0.png" class="farmacia">
 <p>Remédio</p>
